# nibble

./: .gitignore  README.md
app/: main.js  package-lock.json  package.json  preload.js  sidecar.js
app/assets/sprite/: CREDITS.md
app/windows/: cockpit.css  cockpit.html  cockpit.js  creature.css  creature.html  creature.js  panel.css  panel.html  panel.js  ws.js
core/: build_sidecar.md  pyproject.toml  requirements.txt  run_core.py
core/nibble/: __init__.py  __main__.py  anomaly.py  budget.py  commentary.py  config.py  governor.py  hook.py  hooks_install.py  pricing.py  secrets.py  server.py  service.py  store.py
core/nibble/collectors/: __init__.py  anthropic_api.py  base.py  claude_code.py  openai_api.py
core/tests/: test_core.py
