[project]
name = "nibble-core"
version = "0.1.0"
description = "Nibble local-first AI spend aggregator (Python sidecar)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "keyring>=25",
    "pydantic>=2.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nibble*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
